--- a/pokedex-ultra/package.json
+++ b/pokedex-ultra/package.json
@@ -24,10 +24,14 @@
     "@capacitor/core": "3.0.0",
     "@capacitor/haptics": "1.0.0",
     "@capacitor/keyboard": "1.0.0",
+    "@ionic-native/sqlite": "^5.33.0",
+    "@ionic-native/sqlite-porter": "^5.33.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-sqlite-storage": "^6.0.0",
     "firebase": "^8.6.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
