--- a/pokedex-ultra/package.json
+++ b/pokedex-ultra/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "3.0.0",
     "@capacitor/haptics": "1.0.0",
     "@capacitor/keyboard": "1.0.0",
+    "@ionic-native/core": "^5.33.0",
     "@ionic-native/sqlite": "^5.33.0",
     "@ionic-native/sqlite-porter": "^5.33.0",
     "@ionic/angular": "^5.5.2",
